--- a/aerodatabox_proxy/requirements.txt
+++ b/aerodatabox_proxy/requirements.txt
@@ -1,4 +1,6 @@
-fastapi
-uvicorn
-requests
-python-dotenv
+fastapi>=0.95.0
+uvicorn>=0.22.0
+requests>=2.28.0
+python-dotenv>=1.0.0
+pydantic>=1.10.0
+starlette>=0.27.0
