--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.4.4
+  build_runner: ^2.4.8
+  integration_test:
+    sdk: flutter
   flutter_lints: ^3.0.1
+  test: ^1.24.9
 flutter:
   uses-material-design: true
   assets:
