--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  # Added Flutter localization packages
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.2
   firebase_core: ^2.24.2
   firebase_auth: ^4.15.3
@@ -57,6 +60,9 @@ dev_dependencies:
   test: ^1.24.9
 flutter:
   uses-material-design: true
+
+  # Enable generation of localized strings
+  generate: true
   assets:
     - assets/lib/data/airline_claim_procedures.json
     - assets/lib/data/iata_codes.json
