--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.1
   test: ^1.24.9
+  firebase_auth_mocks: ^0.13.0
 flutter:
   uses-material-design: true
 
@@ -70,3 +71,4 @@ flutter:
     - assets/data/eu_airports.json
     - assets/data/flight_compensation_data.json
     - assets/images/
+    - lib/l10n/
