--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,13 +1,3 @@
-org.gradle.jvmargs=-Xmx6G -XX:MaxPermSize=512m -XX:MaxMetaspaceSize=1G -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-org.gradle.daemon=true
-org.gradle.parallel=true
-org.gradle.configureondemand=true
-org.gradle.caching=true
+org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
-
-# Fix resource compatibility issues
-android.nonTransitiveRClass=true
-android.enableR8.fullMode=false
-android.defaults.buildfeatures.buildconfig=true
-android.nonFinalResIds=false
