--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,6 +1,7 @@
-arb-dir: lib/l10n
+arb-dir: lib/l10n2
 template-arb-file: app_en.arb
-output-localization-file: app_localizations.dart
+# output-localization-file: app_localizations.dart
+# output-dir: lib/l10n
 # output-dir defaults to lib/generated for non-synthetic
 # nullable-getter defaults to false
 # untranslated-messages-file is optional
