--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   image_picker: ^1.0.7
   flutter_local_notifications: ^19.1.0
   url_launcher: ^6.2.5
-  intl: ^0.19.0
+  intl: ^0.20.2
   flutter_secure_storage: ^9.0.0
   uuid: ^4.2.2
   shared_preferences: ^2.2.2
@@ -76,3 +76,4 @@ flutter:
     - assets/data/flight_compensation_data.json
     - assets/images/
     - lib/l10n/
+    - lib/l10n2/
