feat: Complete German and Spanish localization for Flight Compensation Checker
- Added comprehensive German (de) translations for all UI elements
- Added comprehensive Spanish (es) translations for all UI elements
- Localized Flight Compensation Checker screen with validation messages
- Added tooltips, error messages, and document management translations
- Configured untranslated messages reporting in l10n.yaml
- Updated service initialization to use mock Firebase services in dev mode
- Regenerated all localization files with flutter gen-l10n
- All German and Spanish strings now fully translated (0 untranslated messages)

--- a/l10n.yaml
+++ b/l10n.yaml
@@ -4,4 +4,4 @@ template-arb-file: app_en.arb
 # output-dir: lib/l10n
 # output-dir defaults to lib/generated for non-synthetic
 # nullable-getter defaults to false
-# untranslated-messages-file is optional
+untranslated-messages-file: untranslated_messages.txt
