--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,10 +70,14 @@ flutter:
   generate: true
   assets:
     - lib/data/airline_claim_procedures.json
-    - assets/lib/data/iata_codes.json
-    - assets/rapidapi_key.txt
+    - lib/data/iata_codes.json
+    # Temporarily commented out to allow the app to run without this file
+    # - assets/rapidapi_key.txt
     - assets/data/eu_airports.json
     - assets/data/flight_compensation_data.json
-    - assets/images/
-    - lib/l10n/
-    - lib/l10n2/
+    - lib/l10n2/app_en.arb
+    - lib/l10n2/app_de.arb
+    - lib/l10n2/app_es.arb
+    - lib/l10n2/app_fr.arb
+    - lib/l10n2/app_pl.arb
+    - lib/l10n2/app_pt.arb
