--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   # Temporarily disabled due to Android resource linking issues
   # printing: ^5.11.0
   image_picker: ^1.0.7
-  flutter_local_notifications: ^19.1.0
+  flutter_local_notifications: ^17.2.2
   url_launcher: ^6.2.5
   intl: ^0.20.2
   flutter_secure_storage: ^9.0.0
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^2.30.0
   firebase_auth: ^4.19.0
   firebase_messaging: ^14.9.0
+  permission_handler: ^11.1.0
   google_sign_in: ^6.2.1
   cloud_firestore: ^4.17.0
   firebase_storage: ^11.7.0
