--- a/vercel-backend/vercel.json
+++ b/vercel-backend/vercel.json
@@ -1,11 +1,15 @@
 {
   "version": 2,
-  "functions": {
-    "api/sendEmail.js": {
-      "runtime": "nodejs18.x"
+  "builds": [
+    {
+      "src": "api/*.js",
+      "use": "@vercel/node"
     }
-  },
-  "env": {
-    "RESEND_API_KEY": "@resend_api_key"
-  }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    }
+  ]
 }
