feat: Add complete Pay What You Want donation system with startup popup
✨ New Features:
- Complete donation flow with €5, €10, €25 fixed amounts
- 50/50 split between app maintenance and hospice foundation
- Beautiful animated startup popup promoting donations
- 5 donation screens: selection, payment method, processing, success, community impact
- Smart popup timing: shows every 7 days, reduces to 30 days after 3 dismissals
- Payment methods: Credit/Debit Card, PayPal, Apple Pay, Google Pay
- Community impact tracking and statistics
- Receipt email and social sharing functionality

🎨 UI/UX:
- Gradient designs with heart icons and animations
- Clear transparency about charitable split
- Responsive design with accessibility support
- Smooth transitions and loading states
- Non-intrusive popup with easy dismissal

🔧 Technical:
- DonationService with mock data for development
- DonationViewModel for state management
- DonationPopupService for smart popup timing
- Complete data models with JSON serialization
- Integration with existing dependency injection
- SharedPreferences for popup frequency tracking

📱 Integration:
- Entry point in Profile screen Support Our Mission card
- Startup popup in main navigation
- Navigation routes for all donation screens
- Service registration in dependency injection

This implements the requested charitable payment model with transparency and emotional connection to support both app development and hospice care.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   local_auth: ^2.1.6
   # Charts for dashboard
   fl_chart: ^0.64.0
+  # Sharing functionality for donations
+  share_plus: ^7.2.2
+  # JSON serialization for donation models
+  json_annotation: ^4.8.1
   # Improved error handling
   dio: ^5.3.3
   # Animations
