AuthScreen: show app logo on white background; register asset in pubspec. Remove stray assets/lib/data/airline_claim_procedures.json overriding web load. Hardened airline procedure parsing + confirmation screen logging tweaks. No changes to vercel-backend.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ flutter:
     # - assets/rapidapi_key.txt
     - assets/data/eu_airports.json
     - assets/data/flight_compensation_data.json
+    - assets/icons/app_icon.png
     - lib/l10n2/app_en.arb
     - lib/l10n2/app_de.arb
     - lib/l10n2/app_es.arb
