web: build fresh Flutter web bundle; fix greeting polish (hide empty parentheses); copy assets into vercel-backend/public for Vercel; local prod preview working on :3000

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,7 @@ app.*.map.json
 DerivedData/
 CON
 
+# Node.js backends (ignore dependencies and local metadata)
+vercel-backend/node_modules/
+backend/functions/node_modules/
+vercel-backend/.vercel/
