--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "git.ignoreLimitWarning": true
+    "git.ignoreLimitWarning": true,
+    "workbench.editor.enablePreview": false,
+    "workbench.editor.autoLockGroups": {
+        "default": true
+    }
 }
