--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^2.30.0
   firebase_auth: ^4.19.0
   firebase_messaging: ^14.9.0
+  firebase_analytics: ^10.8.0
   permission_handler: ^11.1.0
   google_sign_in: ^6.2.1
   cloud_firestore: ^4.17.0
