--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -18,7 +18,8 @@
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
     "resend": "^3.2.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "openai": "^4.24.0"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
