fix(ci): Force fresh npm install to avoid cache issues
Changed from 'npm ci' to 'npm install' with node_modules cleanup.

This ensures GitHub Actions uses the updated dependencies:
- Node.js 20
- firebase-functions 5.1.1
- firebase-admin 12.0.0

Previous deployment was using cached old dependencies (4.9.0).

--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -28,7 +28,8 @@ jobs:
       - name: Install dependencies
         run: |
           cd functions
-          npm ci
+          rm -rf node_modules
+          npm install
       
       - name: Setup Google Cloud credentials
         uses: google-github-actions/auth@v1
