--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -40,7 +40,7 @@ jobs:
         run: npm install -g firebase-tools
       
       - name: Deploy to Firebase
-        run: firebase deploy --only functions --project flightcompensation-d059a
+        run: firebase deploy --only functions --project flightcompensation-d059a --force
           
       - name: Deployment summary
         run: |
