feat(ci): Add automatic environment variable configuration
AUTO-CONFIGURE API KEYS:
- OpenAI API key automatically set from GitHub secrets
- SendGrid/Resend API key automatically set from GitHub secrets
- Environment variables updated on every deployment
- Both ingestEmail and healthCheck functions configured

WORKFLOW IMPROVEMENTS:
- Added gcloud CLI setup
- Deploy functions first (structure)
- Then update environment variables (configuration)
- Secrets managed securely in GitHub

This enables the ingestEmail function to use GPT-4 for email parsing
and send notifications via SendGrid.

--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -39,8 +39,23 @@ jobs:
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
       
+      - name: Set up gcloud CLI
+        uses: google-github-actions/setup-gcloud@v1
+      
       - name: Deploy to Firebase
         run: firebase deploy --only functions --project flightcompensation-d059a --force
+      
+      - name: Set environment variables for functions
+        run: |
+          gcloud functions deploy ingestEmail \
+            --update-env-vars OPENAI_API_KEY="${{ secrets.OPENAI_API_KEY }}",RESEND_API_KEY="${{ secrets.RESEND_API_KEY }}" \
+            --region us-central1 \
+            --project flightcompensation-d059a
+          
+          gcloud functions deploy healthCheck \
+            --update-env-vars OPENAI_API_KEY="${{ secrets.OPENAI_API_KEY }}",RESEND_API_KEY="${{ secrets.RESEND_API_KEY }}" \
+            --region us-central1 \
+            --project flightcompensation-d059a
           
       - name: Deployment summary
         run: |
