fix(ci): Specify source directory for gcloud function deployment
FIX: gcloud was looking for function.js in root directory
SOLUTION: Added --source functions flag to gcloud deploy commands

Now gcloud knows:
- Source code is in functions/ directory
- Entry points are ingestEmail and healthCheck
- Runtime is Node.js 20
- Generation 2 functions
- HTTP triggers with unauthenticated access

This will properly update environment variables on deployed functions.

--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -48,11 +48,23 @@ jobs:
       - name: Set environment variables for functions
         run: |
           gcloud functions deploy ingestEmail \
+            --gen2 \
+            --runtime nodejs20 \
+            --entry-point ingestEmail \
+            --source functions \
+            --trigger-http \
+            --allow-unauthenticated \
             --update-env-vars OPENAI_API_KEY="${{ secrets.OPENAI_API_KEY }}",RESEND_API_KEY="${{ secrets.RESEND_API_KEY }}" \
             --region us-central1 \
             --project flightcompensation-d059a
           
           gcloud functions deploy healthCheck \
+            --gen2 \
+            --runtime nodejs20 \
+            --entry-point healthCheck \
+            --source functions \
+            --trigger-http \
+            --allow-unauthenticated \
             --update-env-vars OPENAI_API_KEY="${{ secrets.OPENAI_API_KEY }}",RESEND_API_KEY="${{ secrets.RESEND_API_KEY }}" \
             --region us-central1 \
             --project flightcompensation-d059a
