--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^5.1.1",
     "openai": "^4.20.1",
-    "@sendgrid/mail": "^8.1.0"
+    "@sendgrid/mail": "^8.1.0",
+    "busboy": "^1.6.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.3.0"
