--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "echo 'No build needed - using pre-built files'",
+  "buildCommand": "echo 'Using pre-built static files from vercel-backend/public'",
   "outputDirectory": "vercel-backend/public",
   "framework": null,
   "installCommand": "echo 'No install needed'"
