--- a/.github/workflows/build_web.yml
+++ b/.github/workflows/build_web.yml
@@ -36,7 +36,7 @@ jobs:
         run: flutter pub get
 
       - name: Build Web (release)
-        run: flutter build web --release
+        run: flutter build web --release --no-wasm-dry-run
 
       - name: Prepare static output directory
         run: |
