ci(test): run unit/widget and headless Chrome MiniKit auth tests in build pipeline before web build

--- a/.github/workflows/build_web.yml
+++ b/.github/workflows/build_web.yml
@@ -35,6 +35,17 @@ jobs:
       - name: Fetch dependencies
         run: flutter pub get
 
+      - name: Setup Chrome (for web tests)
+        uses: browser-actions/setup-chrome@v1
+
+      - name: Run unit/widget tests (non-web)
+        run: flutter test -r compact test/world_id_email_detection_test.dart test/email_collection_test.dart
+
+      - name: Run MiniKit web auth test (headless Chrome)
+        run: |
+          flutter config --enable-web
+          flutter test --platform chrome test/widget/minikit_auth_test.dart
+
       - name: Build Web (release)
         run: flutter build web --release --no-wasm-dry-run
 
